fixed overlay cutting off text

--- a/src/styles/overlay.css
+++ b/src/styles/overlay.css
@@ -29,4 +29,8 @@
     .overlay a img {
         width: 5vw;
     }
+
+    .overlay {
+        left: 1.5vw;
+    }
 }
